--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "classnames": "^2.2.6",
+    "highlight.js": "^10.7.0",
     "lodash": "^4.17.19",
+    "marked": "^2.0.1",
     "next": "^9.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
